...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomePage"
    android:background="@color/grey3">

    <ImageButton
        android:id="@+id/admin"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/baseline_account_circle_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.008"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.157"
        app:layout_constraintStart_toEndOf="@+id/searchView"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/iconScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"

        android:layout_marginTop="8dp"
        android:padding="10dp"
        android:paddingTop="20dp"
...
